syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;
message Events {
    repeated Sbsticket_Approval sbsticket_approvals = 1;
    repeated Sbsticket_ApprovalForAll sbsticket_approval_for_alls = 2;
    repeated Sbsticket_BatchMetadataUpdate sbsticket_batch_metadata_updates = 3;
    repeated Sbsticket_ChaiBought sbsticket_chai_boughts = 4;
    repeated Sbsticket_Donation sbsticket_donations = 5;
    repeated Sbsticket_ListingPriceUpdated sbsticket_listing_price_updateds = 6;
    repeated Sbsticket_MarketItemCreated sbsticket_market_item_createds = 7;
    repeated Sbsticket_MarketSale sbsticket_market_sales = 8;
    repeated Sbsticket_MetadataUpdate sbsticket_metadata_updates = 9;
    repeated Sbsticket_TokenItem sbsticket_token_items = 10;
    repeated Sbsticket_TokenResold sbsticket_token_resolds = 11;
    repeated Sbsticket_Transfer sbsticket_transfers = 12;
    repeated Sbsticket__UpdateData sbsticket__update_data = 13;
}
message Sbsticket_Approval {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes approved = 6;
    string token_id = 7;
}
message Sbsticket_ApprovalForAll {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes operator = 6;
    bool approved = 7;
}
message Sbsticket_BatchMetadataUpdate {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string u_from_token_id = 5;
    string u_to_token_id = 6;
}
message Sbsticket_ChaiBought {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string name = 5;
    string message = 6;
    string timestamp = 7;
    bytes buyer = 8;
    string amount = 9;
}
message Sbsticket_Donation {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    string name = 6;
    string message = 7;
    string timestamp = 8;
    string amount = 9;
}
message Sbsticket_ListingPriceUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string new_price = 5;
}
message Sbsticket_MarketItemCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string token_id = 5;
    bytes seller = 6;
    bytes owner = 7;
    string price = 8;
    bool sold = 9;
}
message Sbsticket_MarketSale {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string token_id = 5;
    bytes buyer = 6;
    bytes seller = 7;
    string price = 8;
}
message Sbsticket_MetadataUpdate {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string u_token_id = 5;
}
message Sbsticket_TokenItem {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string token_uri = 5;
    string price = 6;
    string new_token_id = 7;
}
message Sbsticket_TokenResold {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string token_id = 5;
    bytes seller = 6;
    bytes owner = 7;
    string price = 8;
}
message Sbsticket_Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string token_id = 7;
}
message Sbsticket__UpdateData {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string func = 5;
    string txn = 6;
    string timestamp = 7;
    bytes buyer = 8;
}
  
